[package]
name = "rusty_spelling"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["altunenes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tts = "0.25.0"
colored = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = "0.4.23"
speech-dispatcher-sys = "0.7.0"
[build]
target = "x86_64-pc-windows-msvc"
